--- a/html/index.html
+++ b/html/index.html
@@ -6,18 +6,18 @@
             href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Oleo+Script:wght@700&family=Quicksand:wght@300;500;700&display=swap"
             rel="stylesheet"
             />
-            <link rel="stylesheet" href="shared.css">
-            <link rel="stylesheet" href="style.css">
+            <link rel="stylesheet" href="/styles/shared.css">
+            <link rel="stylesheet" href="/styles/style.css">
         <title>Travel Goals</title>
     </head>
     <body>
         <Header>
             <div id="page-logo">
-                <a href="/index.html">Travel Goals</a>
+                <a href="/html/index.html">Travel Goals</a>
             </div>
             <nav>
                 <ul>
-                    <li><a href="places.html">Destination</a></li>
+                    <li><a href="/html/places.html">Destination</a></li>
                     <li><a href="">About</a></li>
                 </ul>
             </nav>
@@ -27,7 +27,7 @@
                 <div id="hero-content">
                     <h1>Ahmad's Travel page</h1>
                     <p>Let's explore the world togather!</p>
-                    <a href="/places.html">Discover Places</a>
+                    <a href="/html/places.html">Discover Places</a>
                 </div>
             </section>
             <section id="highlights">
