--- a/html/places.html
+++ b/html/places.html
@@ -6,18 +6,18 @@
             href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Oleo+Script:wght@700&family=Quicksand:wght@300;500;700&display=swap"
             rel="stylesheet"
             />
-            <link rel="stylesheet" href="shared.css">
-            <link rel="stylesheet" href="places.css">
+            <link rel="stylesheet" href="/styles/shared.css">
+            <link rel="stylesheet" href="/styles/places.css">
         <title>Travel Goals</title>
     </head>
     <body>
         <Header>
             <div id="page-logo">
-                <a href="/index.html">Travel Goals</a>
+                <a href="/html/index.html">Travel Goals</a>
             </div>
             <nav>
                 <ul>
-                    <li><a href="places.html">Destination</a></li>
+                    <li><a href="/html/places.html">Destination</a></li>
                     <li><a href="">About</a></li>
                 </ul>
             </nav>
@@ -25,7 +25,7 @@
        <Main>
             <ul>
                 <li>
-                    <img src="images/places/barcelona.jpg" alt="City of Barcelona" />
+                    <img src="/images/places/barcelona.jpg" alt="City of Barcelona" />
                     <div class="item-content">
                         <div>
                             <h2>Barcelona</h2>
@@ -40,7 +40,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="images/places/hawaii.jpg" alt="Hawaii beach" />
+                    <img src="/images/places/hawaii.jpg" alt="Hawaii beach" />
                     <div class="item-content">
                         <div>
                             <h2>Hawaii</h2>
@@ -50,12 +50,12 @@
                             </p>
                         </div>
                         <div class="actions">
-                            <a href="hhttps://en.wikipedia.org/wiki/Hawaii">Explore &#x2192</a>
+                            <a href="https://en.wikipedia.org/wiki/Hawaii">Explore &#x2192</a>
                         </div>
                  </div>
                 </li>
                 <li>
-                    <img src="images/places/london.jpg" alt="London city" />
+                    <img src="/images/places/london.jpg" alt="London city" />
                     <div class="item-content">
                         <div>
                             <h2>London</h2>
@@ -74,7 +74,7 @@
                  </div>
                 </li>
                 <li>
-                    <img src="images/places/miami.jpg" alt="Miami streets" />
+                    <img src="/images/places/miami.jpg" alt="Miami streets" />
                     <div class="item-content">
                          <div>
                             <h2>Miami</h2>
@@ -89,7 +89,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="images/places/munich.jpg" alt="Munich football stadium" />
+                    <img src="/images/places/munich.jpg" alt="Munich football stadium" />
                     <div class="item-content">
                         <div>
                             <h2>Munich</h2>
@@ -104,7 +104,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="images/places/new-york-city.jpg" alt="New York City skyline" />
+                    <img src="/images/places/new-york-city.jpg" alt="New York City skyline" />
                     <div class="item-content">
                         <div>
                             <h2>New York City</h2>
@@ -119,7 +119,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="images/places/paris.jpg" alt="Paris city" />
+                    <img src="/images/places/paris.jpg" alt="Paris city" />
                     <div class="item-content">
                         <div>
                             <h2>Paris</h2>
@@ -134,7 +134,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="images/places/sydney.jpg" alt="Sydney beach" />
+                    <img src="/images/places/sydney.jpg" alt="Sydney beach" />
                     <div class="item-content">
                         <div>
                             <h2>Sydney</h2>
@@ -149,7 +149,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="images/places/tokyo.jpg" alt="Tokyo skyline" />
+                    <img src="/images/places/tokyo.jpg" alt="Tokyo skyline" />
                     <div class="item-content">
                         <div>
                             <h2>Tokyo</h2>
@@ -164,7 +164,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="images/places/bali.jpg" alt="Bali beach" />
+                    <img src="/images/places/bali.jpg" alt="Bali beach" />
                     <div class="item-content">
                          <div>
                             <h2>Bali</h2>
